# garbage-sorting

./: .env.example  .gitignore  README.md  package-lock.json  package.json  vite.config.js
.github/workflows/: main.yml
model/: mega.ino  require.sh
src/: App.vue  Home.vue  NewPage.vue  router.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: camera.rs  lib.rs  main.rs  predict.rs  rasp.rs  serial.rs  xy_core.rs
src-tauri/src/yolo_binding/: Cargo.toml  LICENSE
src-tauri/src/yolo_binding/src/core/: export.rs
src/pages/: CustomDialog.vue  Home.vue  Panel.vue
